--- a/medium_calc.html
+++ b/medium_calc.html
@@ -35,6 +35,7 @@
 			<button onclick="Plus_tochka()">.</button>
 		</div>
 	</div>
+	<div id="My_Name">By Stanislav Kozachenko</div>
 </section>
 </body>
 </html>
