--- a/medium_calc.html
+++ b/medium_calc.html
@@ -1,5 +1,3 @@
-
-<!--by Stanislav Kozacheko - https://github.com/StanislavKozachenko/-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,6 +5,7 @@
 	<link rel="shortcut icon" href="for_divs/icon.png" type="image/x-icon">
 	<title>Medium Calculator</title>
 	<link rel="stylesheet" type="text/css" href="cssformedium_calc.css">
+	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
 	<script src="js/jsformedium_calc.js" defer></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
